# SuffixAutomaton

./: CMakeLists.txt  README.md  circularArrayMod.h  compararTexto.h  generadorPalabras.h  main  main.cpp  menu.h  nodeMod.h  patriciaTrie.h  prueba_turnitin.cpp  suffixAutomaton.h  suffixAutomatonNO.h  suffixAutomatonOp.h  texto_base.txt  texto_copia.txt  trie.h  turnitin_aestherik.cpp  version1.cpp
